limpeza no codigo

--- a/FirstWork/index.html
+++ b/FirstWork/index.html
@@ -37,15 +37,15 @@ https://templatemo.com/tm-556-catalog-z
                 <li class="nav-item">
                     <a class="nav-link nav-link-1 active" aria-current="page" href="index.html">Categorias</a>
                 </li>
-                <li class="nav-item">
+                <!-- <li class="nav-item">
                     <a class="nav-link nav-link-2" href="videos.html">Videos</a>
-                </li>
+                </li> -->
                 <li class="nav-item">
                     <a class="nav-link nav-link-3" href="about.html">Sobre</a>
                 </li>
-                <li class="nav-item">
+                <!-- <li class="nav-item">
                     <a class="nav-link nav-link-4" href="contact.html">Contato</a>
-                </li>
+                </li> -->
                 <li class="nav-item">
                     <a class="nav-link nav-link-4" href="cadastro.html">Faça o seu cadastro</a>
                 </li>
@@ -70,7 +70,7 @@ https://templatemo.com/tm-556-catalog-z
             </h2>
             <div class="col-6 d-flex justify-content-end align-items-center">
                 <form action="" class="tm-text-primary">
-                    Page <input type="text" value="1" size="1" class="tm-input-paging tm-text-primary"> of 200
+                    Page <input type="text" value="1" size="1" class="tm-input-paging tm-text-primary"> 
                 </form>
             </div>
         </div>
@@ -85,7 +85,7 @@ https://templatemo.com/tm-556-catalog-z
                 </figure>
                 <div class="d-flex justify-content-between tm-text-gray">
                     <span class="tm-text-gray-light">18 Oct 2020</span>
-                    <span>9,906 views</span>
+                    <span>##</span>
                 </div>
             </div>
             <div class="col-xl-3 col-lg-4 col-md-6 col-sm-6 col-12 mb-5">
@@ -98,7 +98,7 @@ https://templatemo.com/tm-556-catalog-z
                 </figure>
                 <div class="d-flex justify-content-between tm-text-gray">
                     <span class="tm-text-gray-light">14 Oct 2020</span>
-                    <span>16,100 views</span>
+                    <span>##</span>
                 </div>
             </div>
             <div class="col-xl-3 col-lg-4 col-md-6 col-sm-6 col-12 mb-5">
@@ -111,7 +111,7 @@ https://templatemo.com/tm-556-catalog-z
                 </figure>
                 <div class="d-flex justify-content-between tm-text-gray">
                     <span class="tm-text-gray-light">12 Oct 2020</span>
-                    <span>12,460 views</span>
+                    <span>##</span>
                 </div>
             </div>
 
@@ -125,7 +125,7 @@ https://templatemo.com/tm-556-catalog-z
                 </figure>
                 <div class="d-flex justify-content-between tm-text-gray">
                     <span class="tm-text-gray-light">10 Oct 2020</span>
-                    <span>11,402 views</span>
+                    <span>##</span>
                 </div>
             </div>
             
@@ -139,7 +139,7 @@ https://templatemo.com/tm-556-catalog-z
                 </figure>
                 <div class="d-flex justify-content-between tm-text-gray">
                     <span class="tm-text-gray-light">24 Sep 2020</span>
-                    <span>16,008 views</span>
+                    <span>##</span>
                 </div>
             </div>
 
@@ -153,7 +153,7 @@ https://templatemo.com/tm-556-catalog-z
                 </figure>
                 <div class="d-flex justify-content-between tm-text-gray">
                     <span class="tm-text-gray-light">20 Sep 2020</span>
-                    <span>12,860 views</span>
+                    <span>##</span>
                 </div>
             </div>
 
@@ -167,7 +167,7 @@ https://templatemo.com/tm-556-catalog-z
                 </figure>
                 <div class="d-flex justify-content-between tm-text-gray">
                     <span class="tm-text-gray-light">16 Sep 2020</span>
-                    <span>10,900 views</span>
+                    <span>##</span>
                 </div>
             </div>
 
@@ -181,7 +181,7 @@ https://templatemo.com/tm-556-catalog-z
                 </figure>
                 <div class="d-flex justify-content-between tm-text-gray">
                     <span class="tm-text-gray-light">12 Sep 2020</span>
-                    <span>11,300 views</span>
+                    <span>##</span>
                 </div>
             </div>
 
@@ -195,7 +195,7 @@ https://templatemo.com/tm-556-catalog-z
                 </figure>
                 <div class="d-flex justify-content-between tm-text-gray">
                     <span class="tm-text-gray-light">10 Sep 2020</span>
-                    <span>42,700 views</span>
+                    <span>##</span>
                 </div>
             </div>
 
@@ -209,7 +209,7 @@ https://templatemo.com/tm-556-catalog-z
                 </figure>
                 <div class="d-flex justify-content-between tm-text-gray">
                     <span class="tm-text-gray-light">8 Sep 2020</span>
-                    <span>11,402 views</span>
+                    <span>##</span>
                 </div>
             </div>
 
@@ -223,7 +223,7 @@ https://templatemo.com/tm-556-catalog-z
                 </figure>
                 <div class="d-flex justify-content-between tm-text-gray">
                     <span class="tm-text-gray-light">4 Sep 2020</span>
-                    <span>32,906 views</span>
+                    <span>##</span>
                 </div>
             </div>
 
@@ -237,7 +237,7 @@ https://templatemo.com/tm-556-catalog-z
                 </figure>
                 <div class="d-flex justify-content-between tm-text-gray">
                     <span class="tm-text-gray-light">28 Aug 2020</span>
-                    <span>50,700 views</span>
+                    <span>##</span>
                 </div>
             </div>
 
@@ -251,7 +251,7 @@ https://templatemo.com/tm-556-catalog-z
                 </figure>
                 <div class="d-flex justify-content-between tm-text-gray">
                     <span class="tm-text-gray-light">22 Aug 2020</span>
-                    <span>107,510 views</span>
+                    <span>##</span>
                 </div>
             </div>
 
@@ -265,7 +265,7 @@ https://templatemo.com/tm-556-catalog-z
                 </figure>
                 <div class="d-flex justify-content-between tm-text-gray">
                     <span class="tm-text-gray-light">14 Aug 2020</span>
-                    <span>118,006 views</span>
+                    <span>##</span>
                 </div>
             </div>
 
@@ -279,7 +279,7 @@ https://templatemo.com/tm-556-catalog-z
                 </figure>
                 <div class="d-flex justify-content-between tm-text-gray">
                     <span class="tm-text-gray-light">9 Aug 2020</span>
-                    <span>121,300 views</span>
+                    <span>##</span>
                 </div>
             </div>
 
@@ -293,7 +293,7 @@ https://templatemo.com/tm-556-catalog-z
                 </figure>
                 <div class="d-flex justify-content-between tm-text-gray">
                     <span class="tm-text-gray-light">3 Aug 2020</span>
-                    <span>21,204 views</span>
+                    <span>##</span>
                 </div>
             </div>         
         </div> <!-- row -->
@@ -335,8 +335,7 @@ https://templatemo.com/tm-556-catalog-z
                         <li class="mb-2"><a href="https://instagram.com"><i class="fab fa-instagram"></i></a></li>
                         <li class="mb-2"><a href="https://pinterest.com"><i class="fab fa-pinterest"></i></a></li>
                     </ul>
-                    <a href="#" class="tm-text-gray text-right d-block mb-2">Terms of Use</a>
-                    <a href="#" class="tm-text-gray text-right d-block">Privacy Policy</a>
+                    
                 </div>
             </div>
             <div class="row">
