--- a/FirstWork/about.html
+++ b/FirstWork/about.html
@@ -35,17 +35,17 @@ https://templatemo.com/tm-556-catalog-z
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ml-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link nav-link-1" href="index.html">Categoria</a>
+                    <a class="nav-link nav-link-1" href="index.html">Categorias</a>
                 </li>
-                <li class="nav-item">
+                <!-- <li class="nav-item">
                     <a class="nav-link nav-link-2" href="videos.html">Videos</a>
-                </li>
+                </li> -->
                 <li class="nav-item">
                     <a class="nav-link nav-link-3 active" aria-current="page" href="about.html">Sobre</a>
                 </li>
-                <li class="nav-item">
+                <!-- <li class="nav-item">
                     <a class="nav-link nav-link-4" href="contact.html">Contato</a>
-                </li>
+                </li> -->
                 <li class="nav-item">
                     <a class="nav-link nav-link-4" href="cadastro.html">Faça o seu cadastro</a>
                 </li>
@@ -163,8 +163,7 @@ https://templatemo.com/tm-556-catalog-z
                         <li class="mb-2"><a href="https://instagram.com"><i class="fab fa-instagram"></i></a></li>
                         <li class="mb-2"><a href="https://pinterest.com"><i class="fab fa-pinterest"></i></a></li>
                     </ul>
-                    <a href="#" class="tm-text-gray text-right d-block mb-2">Terms of Use</a>
-                    <a href="#" class="tm-text-gray text-right d-block">Privacy Policy</a>
+                   
                 </div>
             </div>
             <div class="row">
