--- a/FirstWork/contact.html
+++ b/FirstWork/contact.html
@@ -37,14 +37,17 @@ https://templatemo.com/tm-556-catalog-z
                 <li class="nav-item">
                     <a class="nav-link nav-link-1" href="index.html">Categorias</a>
                 </li>
-                <li class="nav-item">
+                <!-- <li class="nav-item">
                     <a class="nav-link nav-link-2" href="videos.html">Videos</a>
-                </li>
+                </li> -->
                 <li class="nav-item">
                     <a class="nav-link nav-link-3" href="about.html">Sobre</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link nav-link-4 active" aria-current="page" href="contact.html">Contato</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link nav-link-4" href="cadastro.html">Faça o seu cadastro</a>
                 </li>
             </ul>
             </div>
@@ -203,8 +206,7 @@ https://templatemo.com/tm-556-catalog-z
                         <li class="mb-2"><a href="https://instagram.com"><i class="fab fa-instagram"></i></a></li>
                         <li class="mb-2"><a href="https://pinterest.com"><i class="fab fa-pinterest"></i></a></li>
                     </ul>
-                    <a href="#" class="tm-text-gray text-right d-block mb-2">Terms of Use</a>
-                    <a href="#" class="tm-text-gray text-right d-block">Privacy Policy</a>
+                    
                 </div>
             </div>
             <div class="row">
