--- a/FirstWork/cadastro.html
+++ b/FirstWork/cadastro.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="fontawesome/css/all.min.css">
     <link rel="stylesheet" href="css/templatemo-style.css">
+    <link rel="stylesheet" href="css/cadastroStyle.css">
 <!--
     
 TemplateMo 556 Catalog-Z
@@ -54,6 +55,8 @@ https://templatemo.com/tm-556-catalog-z
         </div>
     </nav>
 
+    <div class="tm-hero d-flex justify-content-center align-items-center" data-parallax="scroll" data-image-src="img/hero.jpg"></div>
+
 <section class="page-section" id="usuario">
     
         <div class="container-fluid tm-mt-60">
@@ -61,9 +64,12 @@ https://templatemo.com/tm-556-catalog-z
             <div class="col-lg-22 col-14 mb-5">
                 <h2 class="tm-text-primary text-center mb-5">Faça já o seu cadastro</h2>
 
-                     <?php if($_GET) : ?>
-                          <h3 class="section-subheading"><strong>Ocoreu um erro ao tentar cadastrar no banco.</strong></h3>
-                     <?php endif; ?>
+                <div id="alertBox">
+                    <?php if($_GET) : ?>
+                        <h3 class="section-subheading"><strong>Ocoreu um erro ao tentar cadastrar no banco.</strong></h3>
+                    <?php endif; ?>
+                </div>
+
 
                 <form id="usuarioForm" data-sb-form-api-token="API_TOKEN" method="POST" action="php/usuario.cadastro.php" class="tm-contact-form mx-auto">
 
@@ -129,13 +135,6 @@ https://templatemo.com/tm-556-catalog-z
                         <div class="invalid-feedback" data-sb-feedback="rede_social:required">A Rede Social é requirida.</div>
                     </div>
 
-                    <div class="form-group">
-                        <select class="form-control" id="contact-select" name="inquiry">
-                            <option value="-">Tipo de Usuário</option>
-                            <option value="sales">Contratante</option>
-                            <option value="creative">Usuário comum</option>
-                        </select>
-                    </div>
 
                     <div class="d-none" id="submitSuccessMessage">
                         <div class="text-center text-white mb-3">
