--- a/FirstWork/usuario_empresa.html
+++ b/FirstWork/usuario_empresa.html
@@ -8,95 +8,10 @@
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="fontawesome/css/all.min.css">
     <link rel="stylesheet" href="css/templatemo-style.css">
+    <link rel="stylesheet" href="css/usuário_empresa.css">
     <style>
 
-.personal-image{
-margin: 0;
-padding: 0;
-box-sizing: border-box;
-display: flex;
-flex-direction: row;
-justify-content: center;
-align-items: center;
-}
 
-.wrapper{
-  min-height: 75vh;
-  width: 100%;
-  max-width: 550px;
-  text-align: center;   
-  right: auto;
-  background: white;
-  border-radius: 15px;
-  padding: 25px;
-  box-shadow: 0px 10px 15px rgba(0, 0, 0, 0.1);
-}
-
-.img3-logo{
-  border-radius: 50%;
-  overflow: hidden;
-  position: relative;
-  top: -70px;
-  
-}
-.img3-logo img{
-    width: 100%;
-    height: 100%;
-    max-width: 250px;
-}
-
-h3{ 
-  margin-top: -50px;
-  color: #eead2d;
-  font-weight: bold;
-}
-p{
-  margin-top: 5px;
-}
-.media-info{
-  margin-top: 10px;
-}
-
-i{
-  border-radius: 50%;
-  width: 22px;
-  height: 22px;
-}
-
-.btn{
-  margin-top: 1px;
-}
-
-button{
-  margin: 15px;
-  width: 150px;
-  height: 50px;
-  border: none;
-  padding: 10px;    
-  outline: none;
-  color: white;
-  cursor: pointer;
-  font-weight: 600;
-  border-radius: 30px;
-  box-shadow: 0px 10px 15px rgba(0, 0, 0, 0.25);
-}
-
-.btn button:first-child{
-  background: #66bfbf;
-}
-.btn button:last-child{
-  background: #66bfbf;
-}
-.btn button:first-child:hover{
-    background: #66bfbf;
-    border: 1px solid black;
-    color: black;
-}
-.btn button:last-child:hover{
-  background: #66bfbf;
-  border: 1px solid black;
-  color: black;
-}
 
     </style>
 </head>
